Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-23909

Server does not include request id's with authentication errors

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.0.0
    • 5.0.0
    • memcached
    • None
    • Untriaged
    • Unknown

    Description

      Couchbase Server does not appear to currently include request identifiers in its log messages or memcached error response bodies.  This was included as a required part of the RBAC specification.

      https://docs.google.com/document/d/1hJLwk-2-Ai8LlRKyiRuwnff9mEKxN8PBxMMBH5-g4AE/edit

      As part of this issue, the SDK team would like to make the suggestion that rather than include the request-id as a a textual component appended to an error message, that the server return a JSON blob that includes the request identifier, IE:

      std::string buf = "{\"request_id\":" + std::to_string(reqid)  + "}"
      

       This, coupled with errmap will allow us to substantially reduce the amount of superfluous data being passed between the clients and the servers.  It also allows the error message formatting to be managed in a common place so we don't end up with some error messages formatted by errmap, and some being formatted by the server.  Lastly, this would allow the SDKs to trivially represent the specific request-id (or any other request-specific error data) to the application directly, without the need to grep it out of a message blob.

      Attachments

        For Gerrit Dashboard: MB-23909
        # Subject Branch Project Status CR V

        Activity

          People

            trond Trond Norbye
            brett19 Brett Lawson
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty