MB-23909: Generate UUID's as part of logging errors

If the loglevel is set to Error and the log message is for
given connection, a UUID is generated and prepended to the
log message.

<date> WARNING UUID:[123e4567-e89b-12d3-a456-426655440000] blah blah

The memcached core may pick up the UUID and return the UUID
back to the client (this is implemented in a separate patch)

Change-Id: Ic7fab1af4e6f2039caa5ba1f48781365e461a636
Reviewed-on: http://review.couchbase.org/77233
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>